css/table-style.css
table{
    border-collapse:collapse;
}

th {
    font-size: var(--title-font-size);
    font-weight: bold;
    background-color: var(--secondary-color);


    padding: 20px 60px;
    text-align: center;
    border: var(--alternative-color) solid 1px;
}

td{
    font-size: var(--text-font-size);
    font-weight: bold;
    background-color: #fff;
    color: var(--primary-color);

    padding: 20px 60px;
    text-align: center;

    border: var(--alternative-color) solid 1px;;
}

.main-content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

#filter-input{
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 32px;
    align-items: center;
    margin-bottom: 20px;
}

#filter-input input{
    margin-top: 10px;
    width: 300px;
    height: 20px;
    border: var(--alternative-color) solid 1px;
    border-radius: 5px;
    padding: 10px;
    font-size: var(--subtitle-font-size);
}

#lesson-filter{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 32px;
    margin-bottom: 20px;
}

#lesson-filter select{
    margin-top: 10px;
    width: 300px;
    height: 20px;
    border: var(--alternative-color) solid 1px;
    border-radius: 5px;
    padding: 10px;
    font-size: var(--subtitle-font-size);
}

